Add video information and related videos, edit section to include video and comments, edit most icons from Font Awesome to Material Icons, and add assets

--- a/index.html
+++ b/index.html
@@ -5,50 +5,215 @@
         <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
         <meta charset='UTF-8'>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr' crossorigin='anonymous' rel='stylesheet'>
         <link href='style.css' rel='stylesheet'>
     </head>
     <body>
         <main>
+
             <nav>
-                <a href='#'><i class="fas fa-bars"></i></a>
-                <a href='#'><img src='assets/yt_logo_rgb_dark.png' alt='YouTube logo'></a>
+
+                <a href='#'><i class="material-icons">menu</i></a>
+                <a href='#'><img src='assets/yt_logo_rgb_dark.png' alt='YouTube logo' height='18'></a>
                 <form actiom='#' name='search'>
                     <input type='text' name='searchbar' size=50 placeholder='Search'>
-                    <button type='submit'><i class="fas fa-search"></i></button>
+                    <button type='submit'><i class="material-icons">search</i></button>
                 </form>
                 <a href='#'><i class="fas fa-upload"></i></a>
-                <a href='#'><i class="fas fa-th"></i></a>
+                <a href='#'><i class="material-icons">apps</i></a>
                 <a href='#'><i class="fas fa-comment-dots"></i></a>
-                <a href='#'><i class="fas fa-ellipsis-v"></i></a>
+                <a href='#'><i class="material-icons">more_vert</i></a>
                 <a href='#'>Sign in</a>
+
             </nav>
-            <section class='video'>
-                <div class='video-container'>
-                    <iframe alt='Beyoncé - ***Flawless ft. Chimamanda Ngozi Adichie' src='https://www.youtube.com/embed/IyuUWOnS9BY' frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe>
+
+            <section>
+
+                <div class='video'>
+
+                    <div class='video-container'>
+                        <iframe alt='Beyoncé - Formation' src='https://www.youtube.com/embed/WDZJPJV__bQ' frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe>
+                    </div>
+
+                    <header>
+                        <h1>Beyoncé - Formation</h1>
+                        <div class='video-subheading'>
+                            <h2>155,667,807 views</h2>
+                            <div class='video-options'>
+                                <i class="material-icons">thumb_up</i> 1.1M
+                                <i class="material-icons">thumb_down</i> 57K
+                                <i class="fas fa-share"></i> Share
+                                <i class="material-icons">playlist_add</i> Save
+                                <i class="material-icons">more_horiz</i>
+                            </div>
+                        </div>
+                    </header>
+
+                    <hr>
+
+                    <a href='#'><h4>Beyoncé</h4></a>
+                    <i class="material-icons">music_note</i>
+                    Published on Dec 9, 2016
+                    <button>Subscribe 17M</button>
+                    Grammy nominated best video of the year "Formation" from LEMONADE the Visual Album Available Now! iTunes: http://smarturl.it/LEMONADEitunes Amazon.com: http://smarturl.it/LEMONADEcd TIDAL: https://lemonade.tidal.com
+                    Show more
+
+                    <hr>
+
                 </div>
-                <h1>Beyoncé - ***Flawless ft. Chimamanda Ngozi Adichie</h1>
-                <h3>79,198,137 views</h3>
-                <hr>
-                <a href='#'><h4>Beyoncé</h4></a>
-                <hr>
+
+                <div class='comments'>
+
+                    <header>
+                        <h3>40,932 Comments</h3>
+                        <i class="material-icons">sort</i>
+                        Sort by
+                    </header>
+
+                </div>
+
             </section>
+
             <aside>
-                <h2>Up next</h2>
+
+                <header>
+                    <h3>Up next</h3>
+                    <div class='autoplay'>
+                        Autoplay
+                        <input type="checkbox">
+                    </div>
+                </header>
+
+
                 <div class='related-video'>
                     <div class='thumbnail-container'>
-                        <img alt='Beyoncé - Formation' width='168' src='https://i.ytimg.com/vi/WDZJPJV__bQ/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&amp;rs=AOn4CLB-6V9pBIcVR7aKADw4malv2Zudgg'>
-                        <div class='timestamp'>4:48</div>
+                        <img src='assets/beyonce_hold_up.jpg' alt='Beyoncé - Hold Up (Video)' width='168'>
+                        <div class='timestamp'>5:17</div>
                     </div>
-                    <h4>Beyoncé - Formation</h4>
-                    BeyoncéVEVO
-                    155M views
+                    <div class='text-container'>
+                        <h4>Beyoncé - Hold Up (Video)</h4>
+                        BeyoncéVEVO
+                        162M views
+                    </div>
                 </div>
+
+                <hr>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/beyonce_formation.jpg' alt='Beyoncé - Formation' width='168'>
+                        <div class='mix'>
+                            50+
+                            <i class="far fa-play-circle"></i>
+                        </div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>Mix - Beyoncé - Formation</h4>
+                        YouTube
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/childish_gambino_this_is_america.jpg' alt='Childish Gambino - This Is America (Official Video)' width='168'>
+                        <div class='timestamp'>4:05</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>Childish Gambino - This Is America (Official Video)</h4>
+                        ChildishGambinoVEVO <i class="material-icons">check_circle</i>
+                        495M views
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/dj_khaled_wild_thoughts.jpg' alt='DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller' width='168'>
+                        <div class='timestamp'>3:36</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller</h4>
+                        DJKhaledVEVO <i class="material-icons">check_circle</i>
+                        747M views
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/cardi_b_bodak_yellow.jpg' alt='Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]' width='168'>
+                        <div class='timestamp'>3:54</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]</h4>
+                        Cardi B
+                        734M views
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/beyonce_sorry.jpg' alt='Beyoncé - Sorry (Video)' width='168'>
+                        <div class='timestamp'>4:26</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>Beyoncé - Sorry (Video)</h4>
+                        BeyoncéVEVO
+                        286M views
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/adele_someone_like_you.jpg' alt='Adele - Someone Like You' width='168'>
+                        <div class='timestamp'>4:45</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>Adele - Someone Like You</h4>
+                        AdeleVEVO <i class="material-icons">check_circle</i>
+                        1.2B views
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/beyonce_run_the_world.jpg' alt='Beyoncé - Run the World (Girls) (Video - Main Version)' width='168'>
+                        <div class='timestamp'>4:51</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>Beyoncé - Run the World (Girls) (Video - Main Version)</h4>
+                        BeyoncéVEVO
+                        438M views
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/the_carters_apes**t.jpg' alt='APES**T - THE CARTERS' width='168'>
+                        <div class='timestamp'>6:06</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>APES**T - THE CARTERS</h4>
+                        BeyoncéVEVO
+                        157M views
+                    </div>
+                </div>
+
+                <div class='related-video'>
+                    <div class='thumbnail-container'>
+                        <img src='assets/rihanna_needed_me.jpg' alt='Rihanna - Needed Me' width='168'>
+                        <div class='timestamp'>3:15</div>
+                    </div>
+                    <div class='text-container'>
+                        <h4>Rihanna - Needed Me</h4>
+                        RihannaVEVO <i class="material-icons">check_circle</i>
+                        194M views
+                    </div>
+                </div>
+
+                <button>Show more</button>
+
             </aside>
 
-             <section class='comments'>
-                <h2>10,586 Comments</h2>
-            </section>
         </main>
     </body>
 </html>
