--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang='us-en'>
     <head>
-        <title>Beyoncé - ***Flawless ft. Chimamanda Ngozi Adichie - YouTube</title>
+        <title>Beyoncé - Formation - YouTube</title>
         <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
         <meta charset='UTF-8'>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr' crossorigin='anonymous' rel='stylesheet'>
         <link href='style.css' rel='stylesheet'>
@@ -24,7 +24,7 @@
                 <a href='#'><i class="material-icons">apps</i></a>
                 <a href='#'><i class="fas fa-comment-dots"></i></a>
                 <a href='#'><i class="material-icons">more_vert</i></a>
-                <a href='#'>Sign in</a>
+                <a href='#'>Sign in 14px</a>
 
             </nav>
 
@@ -39,25 +39,36 @@
                     <header>
                         <h1>Beyoncé - Formation</h1>
                         <div class='video-subheading'>
-                            <h2>155,667,807 views</h2>
-                            <div class='video-options'>
-                                <i class="material-icons">thumb_up</i> 1.1M
-                                <i class="material-icons">thumb_down</i> 57K
-                                <i class="fas fa-share"></i> Share
-                                <i class="material-icons">playlist_add</i> Save
-                                <i class="material-icons">more_horiz</i>
+                            <h3>155,667,807 views</h3>
+                            <div class='options'>
+                                <a href='#'><i class="material-icons">thumb_up</i> 1.1M</a>
+                                <a href='#'><i class="material-icons">thumb_down</i> 57K</a>
+                                <a href='#'><i class="fas fa-share"></i> Share</a>
+                                <a href='#'><i class="material-icons">playlist_add</i> Save</a>
+                                <a href='#'><i class="material-icons">more_horiz</i></a>
+                                13px
                             </div>
                         </div>
                     </header>
 
                     <hr>
 
-                    <a href='#'><h4>Beyoncé</h4></a>
-                    <i class="material-icons">music_note</i>
-                    Published on Dec 9, 2016
-                    <button>Subscribe 17M</button>
-                    Grammy nominated best video of the year "Formation" from LEMONADE the Visual Album Available Now! iTunes: http://smarturl.it/LEMONADEitunes Amazon.com: http://smarturl.it/LEMONADEcd TIDAL: https://lemonade.tidal.com
-                    Show more
+                    <div class='video-info'>
+                        <a href='#'><img class='channel-icon' src='assets/beyonce.jpg' alt='Beyoncé' width='48px' height='48px'></a>
+                        <div class='upload-info'>
+                            <div class='channel-name'>
+                                <h4><a href='#'>Beyoncé</a></h4> <i class="material-icons">music_note</i>
+                            </div>
+                            <span class='published'>Published on Dec 9, 2016</span>
+                            <p class='description'>
+                                Grammy nominated best video of the year "Formation" from LEMONADE the Visual Album Available Now! iTunes: <a href='#'>http://smarturl.it/LEMONADEitunes</a> Amazon.com: <a href='#'>http://smarturl.it/LEMONADEcd</a> TIDAL: <a href='#'>https://lemonade.tidal.com</a>
+                                <div class='options'>
+                                    <a href='#'>Show more</a>
+                                </div>
+                            </p>
+                        </div>
+                        <button>Subscribe 17M</button>
+                    </div>
 
                     <hr>
 
@@ -66,10 +77,117 @@
                 <div class='comments'>
 
                     <header>
-                        <h3>40,932 Comments</h3>
-                        <i class="material-icons">sort</i>
-                        Sort by
+                        <h2>40,932 Comments</h2>
+                        <div class='options'>
+                            <a href='#'><i class="material-icons">sort</i> Sort by</a>
+                        </div>
                     </header>
+
+                    <div class='comment'>
+                        <a href='#'><img class='channel-icon' src='assets/rihanna.jpg' alt='Rihanna' width='40px' height='40px'></a>
+                        <div class='comment-info'>
+                            <div class='comment-who-when'>
+                                <h5><a href='#'>Rihanna</a></h5> <i class="material-icons">check_circle</i>
+                                <a class='ago' href='#'>4 months ago</a>
+                            </div>
+                            <p class='comment-text'>
+                                😯😯🔥🔥
+                            </p>
+                            <div class='options'>
+                                <a href='#'><i class="material-icons">thumb_up</i></a> 13K
+                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'>Reply</a>
+                            </div>
+                            <div class='replies'>
+                                <a href='#'>View 146 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='comment'>
+                        <a href='#'><img class='channel-icon' src='assets/lady_gaga.jpg' alt='Lady Gaga' width='40px' height='40px'></a>
+                        <div class='comment-info'>
+                            <div class='comment-who-when'>
+                                <h5><a href='#'>Lady Gaga</a></h5> <i class="material-icons">check_circle</i>
+                                <a class='ago' href='#'>1 month ago</a>
+                            </div>
+                            <p class='comment-text'>
+                                🍋
+                            </p>
+                            <div class='options'>
+                                <a href='#'><i class="material-icons">thumb_up</i></a> 2.9K
+                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'>Reply</a>
+                            </div>
+                            <div class='replies'>
+                                <a href='#'>View 21 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='comment'>
+                        <a href='#'><img class='channel-icon' src='assets/taylor_swift.jpg' alt='Taylor Swift' width='40px' height='40px'></a>
+                        <div class='comment-info'>
+                            <div class='comment-who-when'>
+                                <h5><a href='#'>Taylor Swift</a></h5> <i class="material-icons">check_circle</i>
+                                <a class='ago' href='#'>1 month ago</a>
+                            </div>
+                            <p class='comment-text'>
+                                👸
+                            </p>
+                            <div class='options'>
+                                <a href='#'><i class="material-icons">thumb_up</i></a> 5.1K
+                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'>Reply</a>
+                            </div>
+                            <div class='replies'>
+                                <a href='#'>View 82 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class='comment'>
+                        <a href='#'><img class='channel-icon' src='assets/adele.jpg' alt='Adele' width='40px' height='40px'></a>
+                        <div class='comment-info'>
+                            <div class='comment-who-when'>
+                                <h5><a href='#'>Adele</a></h5> <i class="material-icons">check_circle</i>
+                                <a class='ago' href='#'>2 weeks ago</a>
+                            </div>
+                            <p class='comment-text'>
+                                🔥🔥🎶
+                            </p>
+                            <div class='options'>
+                                <a href='#'><i class="material-icons">thumb_up</i></a> 1.4K
+                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'>Reply</a>
+                            </div>
+                            <div class='replies'>
+                                <a href='#'>View 16 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='comment'>
+                        <a href='#'><img class='channel-icon' src='assets/cardi_b.jpg' alt='Cardi B' width='40px' height='40px'></a>
+                        <div class='comment-info'>
+                            <div class='comment-who-when'>
+                                <h5><a href='#'>Cardi B</a></h5> <i class="material-icons">check_circle</i>
+                                <a class='ago' href='#'>3 weeks ago</a>
+                            </div>
+                            <p class='comment-text'>
+                                ✊🏽✊🏾✊🏿
+                            </p>
+                            <div class='options'>
+                                <a href='#'><i class="material-icons">thumb_up</i></a> 381
+                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'>Reply</a>
+                            </div>
+                            <div class='replies'>
+                                <a href='#'>View 3 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
@@ -78,29 +196,28 @@
             <aside>
 
                 <header>
-                    <h3>Up next</h3>
-                    <div class='autoplay'>
-                        Autoplay
-                        <input type="checkbox">
+                    <h2>Up next</h2>
+                    <div class='options'>
+                        Autoplay <input type="checkbox">
                     </div>
                 </header>
 
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/beyonce_hold_up.jpg' alt='Beyoncé - Hold Up (Video)' width='168'>
                         <div class='timestamp'>5:17</div>
                     </div>
                     <div class='text-container'>
                         <h4>Beyoncé - Hold Up (Video)</h4>
-                        BeyoncéVEVO
-                        162M views
-                    </div>
+                        <h6>BeyoncéVEVO
+                        162M views</h6>
+                    </div></a>
                 </div>
 
                 <hr>
 
-                <div class='related-video'>
+                <a href='#'><div class='related-video'>
                     <div class='thumbnail-container'>
                         <img src='assets/beyonce_formation.jpg' alt='Beyoncé - Formation' width='168'>
                         <div class='mix'>
@@ -110,107 +227,109 @@
                     </div>
                     <div class='text-container'>
                         <h4>Mix - Beyoncé - Formation</h4>
-                        YouTube
+                        <h6>YouTube</h6>
                     </div>
-                </div>
+                </div></a>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/childish_gambino_this_is_america.jpg' alt='Childish Gambino - This Is America (Official Video)' width='168'>
                         <div class='timestamp'>4:05</div>
                     </div>
                     <div class='text-container'>
                         <h4>Childish Gambino - This Is America (Official Video)</h4>
-                        ChildishGambinoVEVO <i class="material-icons">check_circle</i>
-                        495M views
-                    </div>
+                        <h6>ChildishGambinoVEVO <i class="material-icons">check_circle</i>
+                        495M views</h6>
+                    </div></a>
                 </div>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/dj_khaled_wild_thoughts.jpg' alt='DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller' width='168'>
                         <div class='timestamp'>3:36</div>
                     </div>
                     <div class='text-container'>
                         <h4>DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller</h4>
-                        DJKhaledVEVO <i class="material-icons">check_circle</i>
-                        747M views
-                    </div>
+                        <h6>DJKhaledVEVO <i class="material-icons">check_circle</i>
+                        747M views</h6>
+                    </div></a>
                 </div>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/cardi_b_bodak_yellow.jpg' alt='Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]' width='168'>
                         <div class='timestamp'>3:54</div>
                     </div>
                     <div class='text-container'>
                         <h4>Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]</h4>
-                        Cardi B
-                        734M views
-                    </div>
+                        <h6>Cardi B
+                        734M views</h6>
+                    </div></a>
                 </div>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/beyonce_sorry.jpg' alt='Beyoncé - Sorry (Video)' width='168'>
                         <div class='timestamp'>4:26</div>
                     </div>
                     <div class='text-container'>
                         <h4>Beyoncé - Sorry (Video)</h4>
-                        BeyoncéVEVO
-                        286M views
-                    </div>
+                        <h6>BeyoncéVEVO
+                        286M views</h6>
+                    </div></a>
                 </div>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/adele_someone_like_you.jpg' alt='Adele - Someone Like You' width='168'>
                         <div class='timestamp'>4:45</div>
                     </div>
                     <div class='text-container'>
                         <h4>Adele - Someone Like You</h4>
-                        AdeleVEVO <i class="material-icons">check_circle</i>
-                        1.2B views
-                    </div>
+                        <h6>AdeleVEVO <i class="material-icons">check_circle</i>
+                        1.2B views</h6>
+                    </div></a>
                 </div>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/beyonce_run_the_world.jpg' alt='Beyoncé - Run the World (Girls) (Video - Main Version)' width='168'>
                         <div class='timestamp'>4:51</div>
                     </div>
                     <div class='text-container'>
                         <h4>Beyoncé - Run the World (Girls) (Video - Main Version)</h4>
-                        BeyoncéVEVO
-                        438M views
-                    </div>
+                        <h6>BeyoncéVEVO
+                        438M views</h6>
+                    </div></a>
                 </div>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/the_carters_apes**t.jpg' alt='APES**T - THE CARTERS' width='168'>
                         <div class='timestamp'>6:06</div>
                     </div>
                     <div class='text-container'>
                         <h4>APES**T - THE CARTERS</h4>
-                        BeyoncéVEVO
-                        157M views
-                    </div>
+                        <h6>BeyoncéVEVO
+                        157M views</h6>
+                    </div></a>
                 </div>
 
                 <div class='related-video'>
-                    <div class='thumbnail-container'>
+                    <a href='#'><div class='thumbnail-container'>
                         <img src='assets/rihanna_needed_me.jpg' alt='Rihanna - Needed Me' width='168'>
                         <div class='timestamp'>3:15</div>
                     </div>
                     <div class='text-container'>
                         <h4>Rihanna - Needed Me</h4>
-                        RihannaVEVO <i class="material-icons">check_circle</i>
-                        194M views
-                    </div>
+                        <h6>RihannaVEVO <i class="material-icons">check_circle</i>
+                        194M views</h6>
+                    </div></a>
                 </div>
 
-                <button>Show more</button>
+                <div class='options'>
+                    <button>Show more</button>
+                </div>
 
             </aside>
 
