Add CSS of nav/video/comment content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href='#'><i class="material-icons">apps</i></a>
                 <a href='#'><i class="fas fa-comment-dots"></i></a>
                 <a href='#'><i class="material-icons">more_vert</i></a>
-                <a href='#'>Sign in 14px</a>
+                <a class='sign-in' href='#'>Sign in</a>
 
             </nav>
 
@@ -33,44 +33,39 @@
                 <div class='video'>
 
                     <div class='video-container'>
-                        <iframe alt='Beyoncé - Formation' src='https://www.youtube.com/embed/WDZJPJV__bQ' frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe>
+                        <iframe src='https://www.youtube.com/embed/WDZJPJV__bQ' frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe>
                     </div>
 
                     <header>
                         <h1>Beyoncé - Formation</h1>
                         <div class='video-subheading'>
                             <h3>155,667,807 views</h3>
-                            <div class='options'>
+                            <div class='video-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i> 1.1M</a>
                                 <a href='#'><i class="material-icons">thumb_down</i> 57K</a>
                                 <a href='#'><i class="fas fa-share"></i> Share</a>
                                 <a href='#'><i class="material-icons">playlist_add</i> Save</a>
                                 <a href='#'><i class="material-icons">more_horiz</i></a>
-                                13px
                             </div>
                         </div>
                     </header>
 
-                    <hr>
-
                     <div class='video-info'>
+                        <a href='#'><button class='subscribe'>Subscribe  <span class='sub-num'>17M</span></button></a>
                         <a href='#'><img class='channel-icon' src='assets/beyonce.jpg' alt='Beyoncé' width='48px' height='48px'></a>
-                        <div class='upload-info'>
+                        <div class='info-container'>
                             <div class='channel-name'>
                                 <h4><a href='#'>Beyoncé</a></h4> <i class="material-icons">music_note</i>
                             </div>
-                            <span class='published'>Published on Dec 9, 2016</span>
+                            <div class='published'>Published on Dec 9, 2016</div>
                             <p class='description'>
                                 Grammy nominated best video of the year "Formation" from LEMONADE the Visual Album Available Now! iTunes: <a href='#'>http://smarturl.it/LEMONADEitunes</a> Amazon.com: <a href='#'>http://smarturl.it/LEMONADEcd</a> TIDAL: <a href='#'>https://lemonade.tidal.com</a>
-                                <div class='options'>
-                                    <a href='#'>Show more</a>
-                                </div>
                             </p>
+                            <a href='#'><div class='show-more'>
+                                Show more
+                            </div></a>
                         </div>
-                        <button>Subscribe 17M</button>
                     </div>
-
-                    <hr>
 
                 </div>
 
@@ -78,7 +73,7 @@
 
                     <header>
                         <h2>40,932 Comments</h2>
-                        <div class='options'>
+                        <div class='sort-by'>
                             <a href='#'><i class="material-icons">sort</i> Sort by</a>
                         </div>
                     </header>
@@ -93,7 +88,7 @@
                             <p class='comment-text'>
                                 😯😯🔥🔥
                             </p>
-                            <div class='options'>
+                            <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 13K
                                 <a href='#'><i class="material-icons">thumb_down</i></a>
                                 <a href='#'>Reply</a>
@@ -114,7 +109,7 @@
                             <p class='comment-text'>
                                 🍋
                             </p>
-                            <div class='options'>
+                            <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 2.9K
                                 <a href='#'><i class="material-icons">thumb_down</i></a>
                                 <a href='#'>Reply</a>
@@ -135,7 +130,7 @@
                             <p class='comment-text'>
                                 👸
                             </p>
-                            <div class='options'>
+                            <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 5.1K
                                 <a href='#'><i class="material-icons">thumb_down</i></a>
                                 <a href='#'>Reply</a>
@@ -157,7 +152,7 @@
                             <p class='comment-text'>
                                 🔥🔥🎶
                             </p>
-                            <div class='options'>
+                            <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 1.4K
                                 <a href='#'><i class="material-icons">thumb_down</i></a>
                                 <a href='#'>Reply</a>
@@ -178,7 +173,7 @@
                             <p class='comment-text'>
                                 ✊🏽✊🏾✊🏿
                             </p>
-                            <div class='options'>
+                            <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 381
                                 <a href='#'><i class="material-icons">thumb_down</i></a>
                                 <a href='#'>Reply</a>
@@ -197,7 +192,7 @@
 
                 <header>
                     <h2>Up next</h2>
-                    <div class='options'>
+                    <div class='optionz'>
                         Autoplay <input type="checkbox">
                     </div>
                 </header>
@@ -327,7 +322,7 @@
                     </div></a>
                 </div>
 
-                <div class='options'>
+                <div class='optionz'>
                     <button>Show more</button>
                 </div>
 
