Add CSS switch generator source, switch and aside button CSS, and comment box model

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                         <a href='#'><img class='channel-icon' src='assets/rihanna.jpg' alt='Rihanna' width='40px' height='40px'></a>
                         <div class='comment-info'>
                             <div class='comment-who-when'>
-                                <h5><a href='#'>Rihanna</a></h5> <i class="material-icons">check_circle</i>
+                                <h5><a href='#'>Rihanna</a></h5>
+                                <i class="material-icons">check_circle</i>
                                 <a class='ago' href='#'>4 months ago</a>
                             </div>
                             <p class='comment-text'>
@@ -111,11 +112,12 @@
                             </p>
                             <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 13K
-                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
-                                <a href='#'>View 146 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'>View 146 replies </a>
+                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -124,7 +126,8 @@
                         <a href='#'><img class='channel-icon' src='assets/lady_gaga.jpg' alt='Lady Gaga' width='40px' height='40px'></a>
                         <div class='comment-info'>
                             <div class='comment-who-when'>
-                                <h5><a href='#'>Lady Gaga</a></h5> <i class="material-icons">check_circle</i>
+                                <h5><a href='#'>Lady Gaga</a></h5>
+                                <i class="material-icons">check_circle</i>
                                 <a class='ago' href='#'>1 month ago</a>
                             </div>
                             <p class='comment-text'>
@@ -132,11 +135,12 @@
                             </p>
                             <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 2.9K
-                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
-                                <a href='#'>View 21 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'>View 21 replies </a>
+                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -145,7 +149,8 @@
                         <a href='#'><img class='channel-icon' src='assets/taylor_swift.jpg' alt='Taylor Swift' width='40px' height='40px'></a>
                         <div class='comment-info'>
                             <div class='comment-who-when'>
-                                <h5><a href='#'>Taylor Swift</a></h5> <i class="material-icons">check_circle</i>
+                                <h5><a href='#'>Taylor Swift</a></h5>
+                                <i class="material-icons">check_circle</i>
                                 <a class='ago' href='#'>1 month ago</a>
                             </div>
                             <p class='comment-text'>
@@ -153,11 +158,12 @@
                             </p>
                             <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 5.1K
-                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
-                                <a href='#'>View 82 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'>View 82 replies </a>
+                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -167,7 +173,8 @@
                         <a href='#'><img class='channel-icon' src='assets/adele.jpg' alt='Adele' width='40px' height='40px'></a>
                         <div class='comment-info'>
                             <div class='comment-who-when'>
-                                <h5><a href='#'>Adele</a></h5> <i class="material-icons">check_circle</i>
+                                <h5><a href='#'>Adele</a></h5>
+                                <i class="material-icons">check_circle</i>
                                 <a class='ago' href='#'>2 weeks ago</a>
                             </div>
                             <p class='comment-text'>
@@ -175,11 +182,12 @@
                             </p>
                             <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 1.4K
-                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
-                                <a href='#'>View 16 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'>View 16 replies </a>
+                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -188,7 +196,8 @@
                         <a href='#'><img class='channel-icon' src='assets/cardi_b.jpg' alt='Cardi B' width='40px' height='40px'></a>
                         <div class='comment-info'>
                             <div class='comment-who-when'>
-                                <h5><a href='#'>Cardi B</a></h5> <i class="material-icons">check_circle</i>
+                                <h5><a href='#'>Cardi B</a></h5>
+                                <i class="material-icons">check_circle</i>
                                 <a class='ago' href='#'>3 weeks ago</a>
                             </div>
                             <p class='comment-text'>
@@ -196,11 +205,12 @@
                             </p>
                             <div class='comment-options'>
                                 <a href='#'><i class="material-icons">thumb_up</i></a> 381
-                                <a href='#'><i class="material-icons">thumb_down</i></a>
+                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
-                                <a href='#'>View 3 replies <i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'>View 3 replies </a>
+                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -213,11 +223,14 @@
 
                 <header>
                     <h2>Up next</h2>
-                    <div class='optionz'>
-                        Autoplay <input type="checkbox">
+                    <div class='autoplay'>
+                        Autoplay
+                        <div class="onoffswitch">
+                            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+                            <label class="onoffswitch-label" for="myonoffswitch"></label>
+                        </div>
                     </div>
                 </header>
-
 
                 <div class='up-next'>
                     <a href='#'><div class='thumbnail-container'>
@@ -226,8 +239,10 @@
                     </div>
                     <div class='text-container'>
                         <h4>Beyoncé - Hold Up (Video)</h4>
-                        <h6>BeyoncéVEVO
-                        162M views</h6>
+                        <div class='related-channel'>
+                            <h6>BeyoncéVEVO
+                            162M views</h6>
+                        </div>
                     </div></a>
                 </div>
 
@@ -241,7 +256,9 @@
                     </div>
                     <div class='text-container'>
                         <h4>Mix - Beyoncé - Formation</h4>
-                        <h6>YouTube</h6>
+                        <div class='related-channel'>
+                            <h6>YouTube</h6>
+                        </div>
                     </div>
                 </div></a>
 
@@ -252,8 +269,11 @@
                     </div>
                     <div class='text-container'>
                         <h4>Childish Gambino - This Is America (Official Video)</h4>
-                        <h6>ChildishGambinoVEVO <i class="material-icons">check_circle</i>
-                        495M views</h6>
+                        <div class='related-channel'>
+                            <h6>ChildishGambinoVEVO</h6>
+                            <i class="material-icons">check_circle</i>
+                        </div>
+                        <h6>495M views</h6>
                     </div></a>
                 </div>
 
@@ -264,8 +284,11 @@
                     </div>
                     <div class='text-container'>
                         <h4>DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller</h4>
-                        <h6>DJKhaledVEVO <i class="material-icons">check_circle</i>
-                        747M views</h6>
+                        <div class='related-channel'>
+                            <h6>DJKhaledVEVO</h6>
+                            <i class="material-icons">check_circle</i>
+                        </div>
+                        <h6>747M views</h6>
                     </div></a>
                 </div>
 
@@ -276,8 +299,10 @@
                     </div>
                     <div class='text-container'>
                         <h4>Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]</h4>
-                        <h6>Cardi B
-                        734M views</h6>
+                        <div class='related-channel'>
+                            <h6>Cardi B
+                            734M views</h6>
+                        </div>
                     </div></a>
                 </div>
 
@@ -288,8 +313,10 @@
                     </div>
                     <div class='text-container'>
                         <h4>Beyoncé - Sorry (Video)</h4>
-                        <h6>BeyoncéVEVO
-                        286M views</h6>
+                        <div class='related-channel'>
+                            <h6>BeyoncéVEVO
+                            286M views</h6>
+                        </div>
                     </div></a>
                 </div>
 
@@ -300,8 +327,11 @@
                     </div>
                     <div class='text-container'>
                         <h4>Adele - Someone Like You</h4>
-                        <h6>AdeleVEVO <i class="material-icons">check_circle</i>
-                        1.2B views</h6>
+                        <div class='related-channel'>
+                            <h6>AdeleVEVO</h6>
+                            <i class="material-icons">check_circle</i>
+                        </div>
+                        <h6>1.2B views</h6>
                     </div></a>
                 </div>
 
@@ -312,8 +342,10 @@
                     </div>
                     <div class='text-container'>
                         <h4>Beyoncé - Run the World (Girls) (Video - Main Version)</h4>
-                        <h6>BeyoncéVEVO
-                        438M views</h6>
+                        <div class='related-channel'>
+                            <h6>BeyoncéVEVO
+                            438M views</h6>
+                        </div>
                     </div></a>
                 </div>
 
@@ -324,8 +356,10 @@
                     </div>
                     <div class='text-container'>
                         <h4>APES**T - THE CARTERS</h4>
-                        <h6>BeyoncéVEVO
-                        157M views</h6>
+                        <div class='related-channel'>
+                            <h6>BeyoncéVEVO
+                            157M views</h6>
+                        </div>
                     </div></a>
                 </div>
 
@@ -336,14 +370,15 @@
                     </div>
                     <div class='text-container'>
                         <h4>Rihanna - Needed Me</h4>
-                        <h6>RihannaVEVO <i class="material-icons">check_circle</i>
-                        194M views</h6>
+                        <div class='related-channel'>
+                            <h6>RihannaVEVO</h6>
+                            <i class="material-icons">check_circle</i>
+                        </div>
+                        <h6>194M views</h6>
                     </div></a>
                 </div>
 
-                <div class='optionz'>
-                    <button>Show more</button>
-                </div>
+                <button>Show more</button>
 
             </aside>
 
