--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                                 </div>
                                 <a href='#'><i class="material-icons actions">more_horiz</i></a>
                             </div>
+                            <div class='sentiment'>
+                                <div class='like-bar'></div>
+                            </div>
                         </div>
                     </header>
 
